Add borders to course options

--- a/courses.html
+++ b/courses.html
@@ -48,25 +48,26 @@
                 <li>Environmental Considerations</li>
                 <li>Hands-On Practical Sessions</li>
             </ol>
-
-            <ul>
-                <li>Beginner Course - Six Weeks</li>
-                <li>Start Date: Saturday 21st October 2023</li>
-                <li>€85</li>
-                <li class="sold">Sold Out</li>
-            </ul>
-            <ul>
-                <li>Beginner Course - Six Weeks</li>
-                <li>Start Date: Saturday 20th January 2024</li>
-                <li>€85</li>
-                <li><a href="form.html" class="available">Places Available</a></li>
-            </ul>
-            <ul>
-                <li>Beginner Course - Six Weeks</li>
-                <li>Start Date: Saturday 2nd March 2024</li>
-                <li>€85</li>
-                <li><a href="form.html" class="available">Places Available</a></li>
-            </ul>
+            <div class="course-boxes">
+                <ul>
+                    <li>Beginner Course - Six Weeks</li>
+                    <li>Start Date: Saturday 21st October 2023</li>
+                    <li>€85</li>
+                    <li class="sold">Sold Out</li>
+                </ul>
+                <ul>
+                    <li>Beginner Course - Six Weeks</li>
+                    <li>Start Date: Saturday 20th January 2024</li>
+                    <li>€85</li>
+                    <li><a href="form.html" class="available">Places Available</a></li>
+                </ul>
+                <ul>
+                    <li>Beginner Course - Six Weeks</li>
+                    <li>Start Date: Saturday 2nd March 2024</li>
+                    <li>€85</li>
+                    <li><a href="form.html" class="available">Places Available</a></li>
+                </ul>
+            </div>
             <p><span class='bold'>Intermediate courses</span> run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
                 evidence of your beekeeping experience with your own hives. All equipment is provided.
             </p>
@@ -86,19 +87,20 @@
                 <li>Hands-On Workshops and Demonstrations</li>
                 <li>Case Studies and Problem-Solving</li>
             </ol>
-            <ul>
-                <li>Intermediate Course - Ten Weeks</li>
-                <li>Start Date: Saturday 4th May 2024</li>
-                <li>€175</li>
-                <li class="sold">Sold Out</li>
-            </ul>
-            <ul>
-                <li>Intermediate Course - Ten Weeks</li>
-                <li>Start Date: Saturday 13th July 2024</li>
-                <li>€175</li>
-                <li><a href="form.html" class="available">Places Available</a></li>
-            </ul>
-        
+            <div class="course-boxes">
+                <ul>
+                    <li>Intermediate Course - Ten Weeks</li>
+                    <li>Start Date: Saturday 4th May 2024</li>
+                    <li>€175</li>
+                    <li class="sold">Sold Out</li>
+                </ul>
+                <ul>
+                    <li>Intermediate Course - Ten Weeks</li>
+                    <li>Start Date: Saturday 13th July 2024</li>
+                    <li>€175</li>
+                    <li><a href="form.html" class="available">Places Available</a></li>
+                </ul>
+            </div>
         </section>
         <hr>
         <section id="why">
