Fix: Align header content evenly on all mobile orientations

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header id="hero">
-        <div id="header-dark">
+        <!-- Div to allow black gradient over background image -->
+        <div id="header-dark"> 
             <nav>
                 <ul id="navbar">
                     <li>
