Fix: Organise divs to fill empty space on tablets in courses section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by enrolling in our immersive course. 
                     <span class='mobile'>Tap the image above to learn more.</span></p>                
             </div>
-            <hr class="hide-hr">
+            <hr class="hide-hr hr-75">
             <div class="invite">
                 <h3>Local Honey</h3>
                 <a href="shop.html"><img src="assets/images/honey-jars.jpg" alt="Shelves of golden honey in labelled jars." class="invitation-images"></a>
