--- a/courses.html
+++ b/courses.html
@@ -34,72 +34,81 @@
         <section id="courses">
             <h2>Upcoming Beekeeping Courses</h2>
             <p><span class='bold'>Beginner courses</span> run for six weeks on Saturdays from 12pm to 3pm. No previous experience is required and all equipment is provided.</p>
-            <p>Our Beginner courses are structured as follows:</p>
-            <ol>
-                <li>Introduction to Beekeeping</li>
-                <li>Basic Bee Biology</li>
-                <li>Setting Up a Hive</li>
-                <li>Beekeeping Equipment</li>
-                <li>Beekeeping Regulations and Safety</li>
-                <li>Beehive Management</li>
-                <li>Seasonal Hive Management</li>
-                <li>Harvesting Honey</li>
-                <li>Pest and Disease Management</li>
-                <li>Environmental Considerations</li>
-                <li>Hands-On Practical Sessions</li>
-            </ol>
-            <div class="course-boxes">
-                <ul>
-                    <li>Beginner Course - Six Weeks</li>
-                    <li>Start Date: Saturday 21st October 2023</li>
-                    <li>€85</li>
-                    <li class="sold">Sold Out</li>
-                </ul>
-                <ul>
-                    <li>Beginner Course - Six Weeks</li>
-                    <li>Start Date: Saturday 20th January 2024</li>
-                    <li>€85</li>
-                    <li><a href="form.html" class="available">Places Available</a></li>
-                </ul>
-                <ul>
-                    <li>Beginner Course - Six Weeks</li>
-                    <li>Start Date: Saturday 2nd March 2024</li>
-                    <li>€85</li>
-                    <li><a href="form.html" class="available">Places Available</a></li>
-                </ul>
+            <div>
+                <div class="structure">
+                    <p>Our Beginner courses are structured as follows:</p>
+                    <ol>
+                        <li>Introduction to Beekeeping</li>
+                        <li>Basic Bee Biology</li>
+                        <li>Setting Up a Hive</li>
+                        <li>Beekeeping Equipment</li>
+                        <li>Beekeeping Regulations and Safety</li>
+                        <li>Beehive Management</li>
+                        <li>Seasonal Hive Management</li>
+                        <li>Harvesting Honey</li>
+                        <li>Pest and Disease Management</li>
+                        <li>Environmental Considerations</li>
+                        <li>Hands-On Practical Sessions</li>
+                    </ol>
+                </div>
+                <div class="course-boxes">
+                    <ul>
+                        <li>Beginner Course - Six Weeks</li>
+                        <li>Start Date: Saturday 21st October 2023</li>
+                        <li>€85</li>
+                        <li class="sold">Sold Out</li>
+                    </ul>
+                    <ul>
+                        <li>Beginner Course - Six Weeks</li>
+                        <li>Start Date: Saturday 20th January 2024</li>
+                        <li>€85</li>
+                        <li><a href="form.html" class="available">Places Available</a></li>
+                    </ul>
+                    <ul>
+                        <li>Beginner Course - Six Weeks</li>
+                        <li>Start Date: Saturday 2nd March 2024</li>
+                        <li>€85</li>
+                        <li><a href="form.html" class="available">Places Available</a></li>
+                    </ul>
+                </div>
             </div>
+            <hr class="hr-75">
             <p><span class='bold'>Intermediate courses</span> run for eight weeks in the summer months beginning in May and ending in September. You must have previously attended our beginners course or provide
                 evidence of your beekeeping experience with your own hives. All equipment is provided.
             </p>
-            <p>Our Intermediate courses are structured as follows:</p>
-            <ol>
-                <li>Advanced Hive Management</li>
-                <li>Queen Rearing</li>
-                <li>Swarm Management</li>
-                <li>Integrated Pest Management (IPM)</li>
-                <li>Hive Products and Value-Added Products</li>
-                <li>Pollination Services</li>
-                <li>Queen Genetics</li>
-                <li>Seasonal Challenges and Solutions</li>
-                <li>Technology in Beekeeping</li>
-                <li>Community Outreach and Education</li>
-                <li>Advanced Environmental Stewardship</li>
-                <li>Hands-On Workshops and Demonstrations</li>
-                <li>Case Studies and Problem-Solving</li>
-            </ol>
-            <div class="course-boxes">
-                <ul>
-                    <li>Intermediate Course - Ten Weeks</li>
-                    <li>Start Date: Saturday 4th May 2024</li>
-                    <li>€175</li>
-                    <li class="sold">Sold Out</li>
-                </ul>
-                <ul>
-                    <li>Intermediate Course - Ten Weeks</li>
-                    <li>Start Date: Saturday 13th July 2024</li>
-                    <li>€175</li>
-                    <li><a href="form.html" class="available">Places Available</a></li>
-                </ul>
+            <div>
+                <div class="structure">
+                    <p>Our Intermediate courses are structured as follows:</p>
+                    <ol>
+                        <li>Advanced Hive Management</li>
+                        <li>Queen Rearing</li>
+                        <li>Swarm Management</li>
+                        <li>Integrated Pest Management (IPM)</li>
+                        <li>Hive Products and Value-Added Products</li>
+                        <li>Pollination Services</li>
+                        <li>Queen Genetics</li>
+                        <li>Seasonal Challenges and Solutions</li>
+                        <li>Technology in Beekeeping</li>
+                        <li>Community Outreach and Education</li>
+                        <li>Advanced Environmental Stewardship</li>
+                        <li>Hands-On Workshops and Demonstrations</li>
+                        <li>Case Studies and Problem-Solving</li>
+                    </ol>
+                </div>
+                <div class="course-boxes">
+                    <ul>
+                        <li>Intermediate Course - Ten Weeks</li>
+                        <li>Start Date: Saturday 4th May 2024</li>
+                        <li>€175</li>
+                        <li class="sold">Sold Out</li>
+                    </ul>
+                    <ul>
+                        <li>Intermediate Course - Ten Weeks</li>
+                        <li>Start Date: Saturday 13th July 2024</li>
+                        <li>€175</li>
+                        <li><a href="form.html" class="available">Places Available</a></li>
+                    </ul>
+                </div>
             </div>
         </section>
         <hr>
