--- a/courses.html
+++ b/courses.html
@@ -120,25 +120,25 @@
                     <h3>1. Connection with Nature</h3>
                     <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, 
                         and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                    <img class="main-images" src="assets/images/bees-hive.jpg" alt="Numerous bees entering a green wooden beehive."/>
+                    <img class="wide-crop main-images" src="assets/images/smiling-beekeeper-crop.png" alt="A smiling beekeeper standing in a sunny field."/>
                 </div>
                 <div class="why-div">
                     <h3>2. Honey Production</h3>
                     <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="main-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
+                    <img class="wide-crop main-images" src="assets/images/honeycomb.jpg" alt="A closeup of honeycomb full of honey"/>
                 </div>
                 <div class="why-div">
                     <h3>3. Positive Environmental Impact</h3>
                     <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in 
-                        supporting local ecosystems and agriculture. Healthy bee populations are essential for biodiversity and food production.</p>
-                    <img class="main-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
+                        supporting local ecosystems. Healthy bee populations are essential for biodiversity and food production.</p>
+                    <img class="wide-crop main-images" src="assets/images/bees-lavender.jpg" alt="Two bees gathering pollen from purple flowers"/>
                 </div>
                 <div class="why-div">
                     <h3>4. Relaxation and Stress Relief</h3>
                     <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention 
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="main-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
+                    <img class="wide-crop main-images" src="assets/images/single-beekeeper.jpg" alt="A beekeeper wearing protective clothing carefully examing their beehive"/>
                 </div>
             </div>
             <h3>But...</h3>
