--- a/shop.html
+++ b/shop.html
@@ -40,50 +40,52 @@
                 <p>Email: <a href="mailto:info@corkbeekeeping.ie">info@corkbeekeeping.ie</a></p>
             </div>
             <hr>
-            <div class="products">
-                <h3>West Cork Honey</h3>
-                <ul>
-                    <li>400ml jars of either solid or runny honey.</li>
-                    <li>€7 each</li>
-                    <li>3 jars for €20</li>
-                </ul>
-                <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
-            </div>
-            <div class="products">
-                <h3>Beekeeper Suit</h3>
-                <ul>
-                    <li>Unisex three layer suit with gloves and mesh veil.</li>
-                    <li>Sizes: Small - Medium - Large</li>
-                    <li>€105</li>
-                </ul>
-                <img class="shop-img" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
-            </div>
-            <div class="products">
-                <h3>Wooden Beehive - Starter Kit</h3>
-                <ul>
-                    <li>5 frame wooden beehive with 10 sheets of honeycomb.</li>
-                    <li>Size: 600L x 450W x 1500H mm</li>
-                    <li>€325</li>
-                </ul>
-                <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="White beekeeping suit with protective gloves and veil.">
-            </div>
-            <div class="products">
-                <h3>Smoker</h3>
-                <ul>
-                    <li>Stainless steel smoker with hand bellows</li>
-                    <li>Size: 170mm height</li>
-                    <li>€25</li>
-                </ul>
-                <img class="shop-img" src="assets/images/smoker-sq.png" alt="White beekeeping suit with protective gloves and veil.">
-            </div>
-            <div class="products">
-                <h3>Glass Jars 400ml - box of 10</h3>
-                <ul>
-                    <li>Glass jars with screw-top metal lids.</li>
-                    <li>Set of 10 labels included.</li>
-                    <li>€15</li>
-                </ul>
-                <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+            <div id="products-div">
+                <div class="products">
+                    <h3>West Cork Honey</h3>
+                    <ul>
+                        <li>400ml jars of either solid or runny honey.</li>
+                        <li>€7 each</li>
+                        <li>3 jars for €20</li>
+                    </ul>
+                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                </div>
+                <div class="products">
+                    <h3>Beekeeper Suit</h3>
+                    <ul>
+                        <li>Unisex three layer suit with gloves and mesh veil.</li>
+                        <li>Sizes: Small - Medium - Large</li>
+                        <li>€105</li>
+                    </ul>
+                    <img class="shop-img" src="assets/images/beekeeper-suit-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                </div>
+                <div class="products">
+                    <h3>Wooden Beehive - Starter Kit</h3>
+                    <ul>
+                        <li>5 frame wooden beehive with 10 sheets of honeycomb.</li>
+                        <li>Size: 600L x 450W x 1500H mm</li>
+                        <li>€325</li>
+                    </ul>
+                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                </div>
+                <div class="products">
+                    <h3>Smoker</h3>
+                    <ul>
+                        <li>Stainless steel smoker with hand bellows</li>
+                        <li>Size: 170mm height</li>
+                        <li>€25</li>
+                    </ul>
+                    <img class="shop-img" src="assets/images/smoker-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                </div>
+                <div class="products">
+                    <h3>Glass Jars 400ml - box of 10</h3>
+                    <ul>
+                        <li>Glass jars with screw-top metal lids.</li>
+                        <li>Set of 10 labels included.</li>
+                        <li>€15</li>
+                    </ul>
+                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                </div>
             </div>
             
         
