--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
                     environment and fostering a sustainable connection with nature.</p>
-                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    <img class="desktop-wide-crop main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
             </div>
         </section>
         <hr>
@@ -49,7 +49,7 @@
                     <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same species of Apis Mellifera is found all throughout Europe. These small creatures play 
                     a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their reproduction. Many foods we rely on for nutrition and agricultural 
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                    <img class="wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees."/>
+                    <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees."/>
                     <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide exposure, diseases, and climate change. Efforts to protect and conserve honey bee 
                     populations are essential for maintaining the health of ecosystems and ensuring global food security. That is where we come in. As beekeepers, we take enjoyment in our work for the 
                     pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction, we beekeepers have an important role to play in preserving and nurturing 
