--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
                     Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
                     environment and fostering a sustainable connection with nature.</p>
-                    <img class="desktop-wide-crop main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
             </div>
         </section>
         <hr>
         <section id="about-bees">
             <h2>The Irish Honey Bee</h2>
                 <div>
-                    <div id="one">
+                    <!-- <div id="one"> -->
                         <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same species of Apis Mellifera is found all throughout Europe. These small creatures play 
                         a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their reproduction. Many foods we rely on for nutrition and agricultural 
                         productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                    </div>
-                    <div id="two">
+                   <!--  </div>
+                    <div id="two"> -->
                         <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees."/>
-                    </div>
-                    <div id="three">
+                    <!-- </div>
+                    <div id="three"> -->
                         <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide exposure, diseases, and climate change. Efforts to protect and conserve honey bee 
                         populations are essential for maintaining the health of ecosystems and ensuring global food security. That is where we come in. As beekeepers, we take enjoyment in our work for the 
                         pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction, we beekeepers have an important role to play in preserving and nurturing 
                         these beautiful and noble insects.</p>
-                    </div>
+                   <!--  </div> -->
                 </div>
         </section>
         <hr>
