Fix: Remove trailing slash on img elements

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     Since 2002, we have been cultivating and caring for a large number of hives and working towards protecting the native Irish honey bee in our area. Beyond the honey jars, we're
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating the harmony they bring to our 
                     environment and fostering a sustainable connection with nature.</p>
-                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland"/>
+                    <img class="main-images" src="assets/images/three-beekeepers.jpg" alt="Three smiling beekeepers standing amongst heehives in sunny woodland">
             </div>
         </section>
         <hr>
@@ -52,7 +52,7 @@
                         productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
                    <!--  </div>
                     <div id="two"> -->
-                        <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees."/>
+                        <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar.jpg" alt="A closeup of a bee on a pink flower with pollen on its knees.">
                     <!-- </div>
                     <div id="three"> -->
                         <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide exposure, diseases, and climate change. Efforts to protect and conserve honey bee 
