--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>West Cork Bees | Signup Form</title>
+    <title>West Cork Bees | Course Signup </title>
     <!-- Favicon Links -->
 
 </head>
