--- a/courses.html
+++ b/courses.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>West Cork Bees | Courses</title>
     <!-- Favicon Links -->
-
+        <!-- Favicon Links -->
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+        
 </head>
 <body>
     <header id="hero">
