--- a/shop.html
+++ b/shop.html
@@ -98,21 +98,21 @@
         </div>
     </main>
 
-    <!-- Footer Content -->
-    <footer>
+     <!-- Footer Content -->
+     <footer>
         <ul>
             <li>
-                <a href="tel:021-12345678">
+                <a href="tel:021-12345678" aria-label="Call us (opens your phone app or program and autofills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
             <li>
-                <a href="mailto:info@corkbeekeeping.ie">
+                <a href="mailto:info@corkbeekeeping.ie" aria-label="Email us (opens your email app or program with our email in the To field)">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" target="_blank">
+                <a href="https://www.google.ie/maps/place/Moneygaff+West,+Cappeen,+Co.+Cork/@51.7949445,-9.0121492,14z/data=!4m6!3m5!1s0x4844fc7a04e15e1d:0x8e32734ebb7915f3!8m2!3d51.7949203!4d-8.9915497!16s%2Fg%2F119vn12c_?entry=ttu" aria-label="Go to our location on Google Maps (opens in a new tab)" target="_blank">
                     <i class="fa-solid fa-map-location-dot"></i>
                 </a>
             </li>       
