Fix: Update img alt text for products.

--- a/shop.html
+++ b/shop.html
@@ -51,7 +51,7 @@
                         <li>€7 each</li>
                         <li>3 jars for €20</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                    <img class="shop-img" src="assets/images/two-honey-jars-sq.png" alt="Two jars of clear golden honey sitting on a wooden table.">
                 </div>
                 <div class="products">
                     <h3>Beekeeper Suit</h3>
@@ -69,7 +69,7 @@
                         <li>Size: 600L x 450W x 1500H mm</li>
                         <li>€325</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                    <img class="shop-img" src="assets/images/colourful-beehives-sq.png" alt="A blue wooden beehive in a field.">
                 </div>
                 <div class="products">
                     <h3>Smoker</h3>
@@ -78,7 +78,7 @@
                         <li>Size: 170mm height</li>
                         <li>€25</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/smoker-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                    <img class="shop-img" src="assets/images/smoker-sq.png" alt="A metal bee smoker with brown bellows resting on top of a beehive.">
                 </div>
                 <div class="products">
                     <h3>Glass Jars 400ml - box of 10</h3>
@@ -87,7 +87,7 @@
                         <li>Set of 10 labels included.</li>
                         <li>€15</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="White beekeeping suit with protective gloves and veil.">
+                    <img class="shop-img" src="assets/images/empty-jar-sq.png" alt="A clean empty glass jar.">
                 </div>
             </div>
             
